content/_generated-doc/2.13/config/quarkus-oidc-token-propagation-reactive.adoc

:summaryTableId: quarkus-oidc-token-propagation-reactive
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-token-propagation-reactive_configuration]]link:#quarkus-oidc-token-propagation-reactive_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-oidc-token-propagation-reactive_quarkus.oidc-token-propagation-reactive.enabled]]`link:#quarkus-oidc-token-propagation-reactive_quarkus.oidc-token-propagation-reactive.enabled[quarkus.oidc-token-propagation-reactive.enabled]`

[.description]
--
If the OIDC Token Reactive Propagation is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_PROPAGATION_REACTIVE_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_PROPAGATION_REACTIVE_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`

|===